--- a/backend/lang/es.json
+++ b/backend/lang/es.json
@@ -331,5 +331,93 @@
     "Product type cannot be changed as products have been registered for this type": "El tipo de producto no se puede cambiar porque se han registrado productos para este tipo.",
     "The ordered category IDs must exactly match all categories for the event without missing or extra IDs.": "Los IDs de categoría ordenados deben coincidir exactamente con todas las categorías del evento sin faltar ni sobrar IDs.",
     "The ordered product IDs must exactly match all products for the event without missing or extra IDs.": "Los IDs de producto ordenados deben coincidir exactamente con todos los productos del evento sin faltar ni sobrar IDs.",
-    "This product is outdated. Please reload the page.": "Este producto está desactualizado. Por favor, recarga la página."
+    "This product is outdated. Please reload the page.": "Este producto está desactualizado. Por favor, recarga la página.",
+    "Reserved": "Reservado",
+    "Cancelled": "Cancelado",
+    "Completed": "Completado",
+    "Awaiting offline payment": "En espera de pago offline",
+    "ID": "ID",
+    "First Name": "Nombre",
+    "Last Name": "Apellido",
+    "Email": "Correo electrónico",
+    "Status": "Estado",
+    "Is Checked In": "Registrado",
+    "Checked In At": "Registrado en",
+    "Product ID": "ID del producto",
+    "Product Name": "Nombre del producto",
+    "Event ID": "ID del evento",
+    "Public ID": "ID público",
+    "Short ID": "ID corto",
+    "Created Date": "Fecha de creación",
+    "Last Updated Date": "Fecha de última actualización",
+    "Notes": "Notas",
+    "Total Before Additions": "Total antes de adiciones",
+    "Total Gross": "Total bruto",
+    "Total Tax": "Total impuestos",
+    "Total Fee": "Total de tarifas",
+    "Total Refunded": "Total reembolsado",
+    "Payment Status": "Estado del pago",
+    "Refund Status": "Estado del reembolso",
+    "Currency": "Moneda",
+    "Created At": "Creado en",
+    "Payment Gateway": "Pasarela de pago",
+    "Is Partially Refunded": "Reembolsado parcialmente",
+    "Is Fully Refunded": "Reembolsado completamente",
+    "Is Free Order": "Pedido gratuito",
+    "Is Manually Created": "Creado manualmente",
+    "Billing Address": "Dirección de facturación",
+    "Promo Code": "Código promocional",
+    "Failed to handle incoming Stripe webhook": "No se pudo procesar el webhook entrante de Stripe",
+    "Notes must be less than 2000 characters": "Las notas deben tener menos de 2000 caracteres",
+    "Invalid payment provider selected.": "Proveedor de pago no válido seleccionado.",
+    "Payment instructions are required when offline payments are enabled.": "Se requieren instrucciones de pago cuando los pagos offline están habilitados.",
+    "The invoice prefix may only contain letters, numbers, and hyphens.": "El prefijo de la factura solo puede contener letras, números y guiones.",
+    "The organization name is required when invoicing is enabled.": "El nombre de la organización es obligatorio cuando la facturación está habilitada.",
+    "The organization address is required when invoicing is enabled.": "La dirección de la organización es obligatoria cuando la facturación está habilitada.",
+    "The invoice start number must be at least 1.": "El número inicial de la factura debe ser al menos 1.",
+    "There is no default account configuration available": "No hay una configuración de cuenta predeterminada disponible",
+    "Product price ID is not valid": "El ID del precio del producto no es válido",
+    "Invoice": "Factura",
+    "Editing order with ID: :id": "Editando pedido con ID: :id",
+    "Marking order as paid": "Marcando pedido como pagado",
+    "Received a :event Stripe event, which has no handler": "Se recibió un evento de Stripe :event, que no tiene un manejador",
+    "Order is not in the correct status to transition to offline payment": "El pedido no está en el estado correcto para pasar a pago offline",
+    "Order reservation has expired": "La reserva del pedido ha expirado",
+    "Offline payments are not enabled for this event": "Los pagos offline no están habilitados para este evento",
+    "There are no products available in this category": "No hay productos disponibles en esta categoría",
+    "Webhook not found": "Webhook no encontrado",
+    "Unable to check in as attendee :attendee_name\\'s order is awaiting payment": "No se puede registrar porque el pedido de :attendee_name está en espera de pago",
+    "Attendee :attendee_name\\'s order cannot be marked as paid. Please check your event settings": "El pedido de :attendee_name no se puede marcar como pagado. Por favor, revisa la configuración de tu evento",
+    "Invoice already exists": "La factura ya existe",
+    "Invoice not found": "Factura no encontrada",
+    "Order is not awaiting offline payment": "El pedido no está en espera de pago offline",
+    "Refund already processed": "Reembolso ya procesado",
+    "Stripe refund successful": "Reembolso de Stripe exitoso",
+    "There are no tickets available for this event": "No hay boletos disponibles para este evento",
+    "Address line 1 is required": "La dirección (línea 1) es obligatoria",
+    "City is required": "La ciudad es obligatoria",
+    "Zip or postal code is required": "El código postal es obligatorio",
+    "Country is required": "El país es obligatorio",
+    "If you did not request a password reset, please immediately reset your password.": "Si no solicitaste un restablecimiento de contraseña, por favor restablécela de inmediato.",
+    "ℹ️ Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "ℹ️ Tu pedido está pendiente de pago. Los boletos han sido emitidos, pero no serán válidos hasta que se reciba el pago.",
+    "ℹ️ This order is pending payment. Please mark the payment as received on the order management page once payment is received.": "ℹ️ Este pedido está pendiente de pago. Por favor, márcalo como pagado en la página de gestión de pedidos una vez recibido el pago.",
+    "Order Status:": "Estado del pedido:",
+    "Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "Tu pedido está pendiente de pago. Los boletos han sido emitidos, pero no serán válidos hasta que se reciba el pago.",
+    "Payment Instructions": "Instrucciones de pago",
+    "Please follow the instructions below to complete your payment.": "Por favor, sigue las instrucciones a continuación para completar tu pago.",
+    "Invoice Number": "Número de factura",
+    "Date Issued": "Fecha de emisión",
+    "Due Date": "Fecha de vencimiento",
+    "Amount Due": "Monto adeudado",
+    "Billed To": "Facturado a",
+    "DESCRIPTION": "DESCRIPCIÓN",
+    "RATE": "TARIFA",
+    "QTY": "CANTIDAD",
+    "AMOUNT": "IMPORTE",
+    "Subtotal": "Subtotal",
+    "Total Discount": "Descuento total",
+    "Total Service Fee": "Tarifa total del servicio",
+    "Total Amount": "Monto total",
+    "For any queries, please contact us at": "Para cualquier consulta, por favor contáctanos en",
+    "Tax Information": "Información fiscal"
 }
