--- a/backend/lang/fr.json
+++ b/backend/lang/fr.json
@@ -331,5 +331,93 @@
     "Product type cannot be changed as products have been registered for this type": "Le type de produit ne peut pas être modifié car des produits ont été enregistrés pour ce type.",
     "The ordered category IDs must exactly match all categories for the event without missing or extra IDs.": "Les ID de catégorie commandés doivent correspondre exactement à toutes les catégories de l'événement sans ID manquants ou en trop.",
     "The ordered product IDs must exactly match all products for the event without missing or extra IDs.": "Les ID de produit commandés doivent correspondre exactement à tous les produits de l'événement sans ID manquants ou en trop.",
-    "This product is outdated. Please reload the page.": "Ce produit est obsolète. Veuillez recharger la page."
+    "This product is outdated. Please reload the page.": "Ce produit est obsolète. Veuillez recharger la page.",
+    "Reserved": "Réservé",
+    "Cancelled": "Annulé",
+    "Completed": "Terminé",
+    "Awaiting offline payment": "En attente de paiement hors ligne",
+    "ID": "ID",
+    "First Name": "Prénom",
+    "Last Name": "Nom",
+    "Email": "E-mail",
+    "Status": "Statut",
+    "Is Checked In": "Enregistré",
+    "Checked In At": "Enregistré à",
+    "Product ID": "ID du produit",
+    "Product Name": "Nom du produit",
+    "Event ID": "ID de l'événement",
+    "Public ID": "ID public",
+    "Short ID": "ID court",
+    "Created Date": "Date de création",
+    "Last Updated Date": "Date de dernière mise à jour",
+    "Notes": "Notes",
+    "Total Before Additions": "Total avant ajouts",
+    "Total Gross": "Total brut",
+    "Total Tax": "Total des taxes",
+    "Total Fee": "Total des frais",
+    "Total Refunded": "Total remboursé",
+    "Payment Status": "Statut du paiement",
+    "Refund Status": "Statut du remboursement",
+    "Currency": "Devise",
+    "Created At": "Créé le",
+    "Payment Gateway": "Passerelle de paiement",
+    "Is Partially Refunded": "Partiellement remboursé",
+    "Is Fully Refunded": "Entièrement remboursé",
+    "Is Free Order": "Commande gratuite",
+    "Is Manually Created": "Créé manuellement",
+    "Billing Address": "Adresse de facturation",
+    "Promo Code": "Code promo",
+    "Failed to handle incoming Stripe webhook": "Échec du traitement du webhook entrant Stripe",
+    "Notes must be less than 2000 characters": "Les notes doivent contenir moins de 2000 caractères",
+    "Invalid payment provider selected.": "Fournisseur de paiement invalide sélectionné.",
+    "Payment instructions are required when offline payments are enabled.": "Les instructions de paiement sont requises lorsque les paiements hors ligne sont activés.",
+    "The invoice prefix may only contain letters, numbers, and hyphens.": "Le préfixe de la facture ne peut contenir que des lettres, des chiffres et des tirets.",
+    "The organization name is required when invoicing is enabled.": "Le nom de l'organisation est requis lorsque la facturation est activée.",
+    "The organization address is required when invoicing is enabled.": "L'adresse de l'organisation est requise lorsque la facturation est activée.",
+    "The invoice start number must be at least 1.": "Le numéro de début de facture doit être au moins 1.",
+    "There is no default account configuration available": "Aucune configuration de compte par défaut disponible",
+    "Product price ID is not valid": "L'ID du prix du produit n'est pas valide",
+    "Invoice": "Facture",
+    "Editing order with ID: :id": "Modification de la commande avec l'ID : :id",
+    "Marking order as paid": "Marquage de la commande comme payée",
+    "Received a :event Stripe event, which has no handler": "Un événement Stripe :event a été reçu, mais aucun gestionnaire n'est défini",
+    "Order is not in the correct status to transition to offline payment": "La commande n'est pas dans le bon état pour passer au paiement hors ligne",
+    "Order reservation has expired": "La réservation de la commande a expiré",
+    "Offline payments are not enabled for this event": "Les paiements hors ligne ne sont pas activés pour cet événement",
+    "There are no products available in this category": "Aucun produit disponible dans cette catégorie",
+    "Webhook not found": "Webhook introuvable",
+    "Unable to check in as attendee :attendee_name\\'s order is awaiting payment": "Impossible d'enregistrer car la commande de :attendee_name est en attente de paiement",
+    "Attendee :attendee_name\\'s order cannot be marked as paid. Please check your event settings": "La commande de :attendee_name ne peut pas être marquée comme payée. Veuillez vérifier les paramètres de votre événement",
+    "Invoice already exists": "La facture existe déjà",
+    "Invoice not found": "Facture introuvable",
+    "Order is not awaiting offline payment": "La commande n'est pas en attente de paiement hors ligne",
+    "Refund already processed": "Remboursement déjà effectué",
+    "Stripe refund successful": "Remboursement Stripe réussi",
+    "There are no tickets available for this event": "Aucun billet disponible pour cet événement",
+    "Address line 1 is required": "Ligne d'adresse 1 requise",
+    "City is required": "Ville requise",
+    "Zip or postal code is required": "Code postal requis",
+    "Country is required": "Pays requis",
+    "If you did not request a password reset, please immediately reset your password.": "Si vous n'avez pas demandé de réinitialisation de mot de passe, veuillez le réinitialiser immédiatement.",
+    "ℹ️ Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "ℹ️ Votre commande est en attente de paiement. Les billets ont été émis, mais ne seront valides qu'après réception du paiement.",
+    "ℹ️ This order is pending payment. Please mark the payment as received on the order management page once payment is received.": "ℹ️ Cette commande est en attente de paiement. Veuillez la marquer comme payée sur la page de gestion des commandes une fois le paiement reçu.",
+    "Order Status:": "Statut de la commande :",
+    "Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "Votre commande est en attente de paiement. Les billets ont été émis, mais ne seront valides qu'après réception du paiement.",
+    "Payment Instructions": "Instructions de paiement",
+    "Please follow the instructions below to complete your payment.": "Veuillez suivre les instructions ci-dessous pour finaliser votre paiement.",
+    "Invoice Number": "Numéro de facture",
+    "Date Issued": "Date d'émission",
+    "Due Date": "Date d'échéance",
+    "Amount Due": "Montant dû",
+    "Billed To": "Facturé à",
+    "DESCRIPTION": "DESCRIPTION",
+    "RATE": "TAUX",
+    "QTY": "QTÉ",
+    "AMOUNT": "MONTANT",
+    "Subtotal": "Sous-total",
+    "Total Discount": "Remise totale",
+    "Total Service Fee": "Frais de service totaux",
+    "Total Amount": "Montant total",
+    "For any queries, please contact us at": "Pour toute question, veuillez nous contacter à",
+    "Tax Information": "Informations fiscales"
 }
