--- a/backend/lang/pt-br.json
+++ b/backend/lang/pt-br.json
@@ -331,5 +331,93 @@
     "Product type cannot be changed as products have been registered for this type": "O tipo de produto não pode ser alterado pois há produtos registrados para este tipo.",
     "The ordered category IDs must exactly match all categories for the event without missing or extra IDs.": "Os IDs das categorias solicitadas devem corresponder exatamente a todas as categorias do evento, sem IDs faltando ou extras.",
     "The ordered product IDs must exactly match all products for the event without missing or extra IDs.": "Os IDs dos produtos solicitados devem corresponder exatamente a todos os produtos do evento, sem IDs faltando ou extras.",
-    "This product is outdated. Please reload the page.": "Este produto está desatualizado. Por favor, recarregue a página."
+    "This product is outdated. Please reload the page.": "Este produto está desatualizado. Por favor, recarregue a página.",
+    "Reserved": "Reservado",
+    "Cancelled": "Cancelado",
+    "Completed": "Concluído",
+    "Awaiting offline payment": "Aguardando pagamento offline",
+    "ID": "ID",
+    "First Name": "Nome",
+    "Last Name": "Sobrenome",
+    "Email": "E-mail",
+    "Status": "Status",
+    "Is Checked In": "Check-in realizado",
+    "Checked In At": "Check-in em",
+    "Product ID": "ID do produto",
+    "Product Name": "Nome do produto",
+    "Event ID": "ID do evento",
+    "Public ID": "ID público",
+    "Short ID": "ID curto",
+    "Created Date": "Data de criação",
+    "Last Updated Date": "Última atualização",
+    "Notes": "Notas",
+    "Total Before Additions": "Total antes dos adicionais",
+    "Total Gross": "Total bruto",
+    "Total Tax": "Total de impostos",
+    "Total Fee": "Total de taxas",
+    "Total Refunded": "Total reembolsado",
+    "Payment Status": "Status do pagamento",
+    "Refund Status": "Status do reembolso",
+    "Currency": "Moeda",
+    "Created At": "Criado em",
+    "Payment Gateway": "Gateway de pagamento",
+    "Is Partially Refunded": "Parcialmente reembolsado",
+    "Is Fully Refunded": "Totalmente reembolsado",
+    "Is Free Order": "Pedido gratuito",
+    "Is Manually Created": "Criado manualmente",
+    "Billing Address": "Endereço de cobrança",
+    "Promo Code": "Código promocional",
+    "Failed to handle incoming Stripe webhook": "Falha ao processar o webhook de entrada do Stripe",
+    "Notes must be less than 2000 characters": "As notas devem ter menos de 2000 caracteres",
+    "Invalid payment provider selected.": "Provedor de pagamento inválido selecionado.",
+    "Payment instructions are required when offline payments are enabled.": "As instruções de pagamento são obrigatórias quando pagamentos offline estão ativados.",
+    "The invoice prefix may only contain letters, numbers, and hyphens.": "O prefixo da fatura pode conter apenas letras, números e hífens.",
+    "The organization name is required when invoicing is enabled.": "O nome da organização é obrigatório quando a faturação está ativada.",
+    "The organization address is required when invoicing is enabled.": "O endereço da organização é obrigatório quando a faturação está ativada.",
+    "The invoice start number must be at least 1.": "O número inicial da fatura deve ser pelo menos 1.",
+    "There is no default account configuration available": "Não há configuração de conta padrão disponível",
+    "Product price ID is not valid": "O ID do preço do produto não é válido",
+    "Invoice": "Fatura",
+    "Editing order with ID: :id": "Editando pedido com ID: :id",
+    "Marking order as paid": "Marcando pedido como pago",
+    "Received a :event Stripe event, which has no handler": "Recebeu um evento Stripe :event, que não tem um manipulador",
+    "Order is not in the correct status to transition to offline payment": "O pedido não está no status correto para transição para pagamento offline",
+    "Order reservation has expired": "A reserva do pedido expirou",
+    "Offline payments are not enabled for this event": "Pagamentos offline não estão ativados para este evento",
+    "There are no products available in this category": "Não há produtos disponíveis nesta categoria",
+    "Webhook not found": "Webhook não encontrado",
+    "Unable to check in as attendee :attendee_name\\'s order is awaiting payment": "Não foi possível realizar o check-in, pois o pedido de :attendee_name está aguardando pagamento",
+    "Attendee :attendee_name\\'s order cannot be marked as paid. Please check your event settings": "O pedido de :attendee_name não pode ser marcado como pago. Por favor, verifique as configurações do evento",
+    "Invoice already exists": "A fatura já existe",
+    "Invoice not found": "Fatura não encontrada",
+    "Order is not awaiting offline payment": "O pedido não está aguardando pagamento offline",
+    "Refund already processed": "Reembolso já processado",
+    "Stripe refund successful": "Reembolso do Stripe bem-sucedido",
+    "There are no tickets available for this event": "Não há ingressos disponíveis para este evento",
+    "Address line 1 is required": "O endereço (linha 1) é obrigatório",
+    "City is required": "A cidade é obrigatória",
+    "Zip or postal code is required": "O CEP ou código postal é obrigatório",
+    "Country is required": "O país é obrigatório",
+    "If you did not request a password reset, please immediately reset your password.": "Se você não solicitou a redefinição de senha, redefina sua senha imediatamente.",
+    "ℹ️ Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "ℹ️ Seu pedido está pendente de pagamento. Os ingressos foram emitidos, mas não serão válidos até que o pagamento seja recebido.",
+    "ℹ️ This order is pending payment. Please mark the payment as received on the order management page once payment is received.": "ℹ️ Este pedido está pendente de pagamento. Por favor, marque o pagamento como recebido na página de gerenciamento de pedidos assim que for recebido.",
+    "Order Status:": "Status do pedido:",
+    "Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "Seu pedido está pendente de pagamento. Os ingressos foram emitidos, mas não serão válidos até que o pagamento seja recebido.",
+    "Payment Instructions": "Instruções de pagamento",
+    "Please follow the instructions below to complete your payment.": "Por favor, siga as instruções abaixo para concluir seu pagamento.",
+    "Invoice Number": "Número da fatura",
+    "Date Issued": "Data de emissão",
+    "Due Date": "Data de vencimento",
+    "Amount Due": "Valor devido",
+    "Billed To": "Faturado para",
+    "DESCRIPTION": "DESCRIÇÃO",
+    "RATE": "TARIFA",
+    "QTY": "QTD",
+    "AMOUNT": "VALOR",
+    "Subtotal": "Subtotal",
+    "Total Discount": "Desconto total",
+    "Total Service Fee": "Taxa total de serviço",
+    "Total Amount": "Valor total",
+    "For any queries, please contact us at": "Para qualquer dúvida, entre em contato conosco em",
+    "Tax Information": "Informações fiscais"
 }
