--- a/backend/lang/ru.json
+++ b/backend/lang/ru.json
@@ -346,5 +346,93 @@
     "Product type cannot be changed as products have been registered for this type": "",
     "The ordered category IDs must exactly match all categories for the event without missing or extra IDs.": "",
     "The ordered product IDs must exactly match all products for the event without missing or extra IDs.": "",
-    "This product is outdated. Please reload the page.": ""
+    "This product is outdated. Please reload the page.": "",
+    "Reserved": "",
+    "Cancelled": "",
+    "Completed": "",
+    "Awaiting offline payment": "",
+    "ID": "",
+    "First Name": "",
+    "Last Name": "",
+    "Email": "",
+    "Status": "",
+    "Is Checked In": "",
+    "Checked In At": "",
+    "Product ID": "",
+    "Product Name": "",
+    "Event ID": "",
+    "Public ID": "",
+    "Short ID": "",
+    "Created Date": "",
+    "Last Updated Date": "",
+    "Notes": "",
+    "Total Before Additions": "",
+    "Total Gross": "",
+    "Total Tax": "",
+    "Total Fee": "",
+    "Total Refunded": "",
+    "Payment Status": "",
+    "Refund Status": "",
+    "Currency": "",
+    "Created At": "",
+    "Payment Gateway": "",
+    "Is Partially Refunded": "",
+    "Is Fully Refunded": "",
+    "Is Free Order": "",
+    "Is Manually Created": "",
+    "Billing Address": "",
+    "Promo Code": "",
+    "Failed to handle incoming Stripe webhook": "",
+    "Notes must be less than 2000 characters": "",
+    "Invalid payment provider selected.": "",
+    "Payment instructions are required when offline payments are enabled.": "",
+    "The invoice prefix may only contain letters, numbers, and hyphens.": "",
+    "The organization name is required when invoicing is enabled.": "",
+    "The organization address is required when invoicing is enabled.": "",
+    "The invoice start number must be at least 1.": "",
+    "There is no default account configuration available": "",
+    "Product price ID is not valid": "",
+    "Invoice": "",
+    "Editing order with ID: :id": "",
+    "Marking order as paid": "",
+    "Received a :event Stripe event, which has no handler": "",
+    "Order is not in the correct status to transition to offline payment": "",
+    "Order reservation has expired": "",
+    "Offline payments are not enabled for this event": "",
+    "There are no products available in this category": "",
+    "Webhook not found": "",
+    "Unable to check in as attendee :attendee_name\\'s order is awaiting payment": "",
+    "Attendee :attendee_name\\'s order cannot be marked as paid. Please check your event settings": "",
+    "Invoice already exists": "",
+    "Invoice not found": "",
+    "Order is not awaiting offline payment": "",
+    "Refund already processed": "",
+    "Stripe refund successful": "",
+    "There are no tickets available for this event": "",
+    "Address line 1 is required": "",
+    "City is required": "",
+    "Zip or postal code is required": "",
+    "Country is required": "",
+    "If you did not request a password reset, please immediately reset your password.": "",
+    "ℹ️ Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "",
+    "ℹ️ This order is pending payment. Please mark the payment as received on the order management page once payment is received.": "",
+    "Order Status:": "",
+    "Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "",
+    "Payment Instructions": "",
+    "Please follow the instructions below to complete your payment.": "",
+    "Invoice Number": "",
+    "Date Issued": "",
+    "Due Date": "",
+    "Amount Due": "",
+    "Billed To": "",
+    "DESCRIPTION": "",
+    "RATE": "",
+    "QTY": "",
+    "AMOUNT": "",
+    "Subtotal": "",
+    "Total Discount": "",
+    "Total Service Fee": "",
+    "Total Amount": "",
+    "For any queries, please contact us at": "",
+    "Tax Information": ""
 }
