--- a/backend/lang/de.json
+++ b/backend/lang/de.json
@@ -331,5 +331,93 @@
     "Product type cannot be changed as products have been registered for this type": "Der Produkttyp kann nicht geändert werden, da Produkte für diesen Typ registriert wurden.",
     "The ordered category IDs must exactly match all categories for the event without missing or extra IDs.": "Die bestellten Kategorie-IDs müssen genau mit allen Kategorien der Veranstaltung übereinstimmen, ohne fehlende oder zusätzliche IDs.",
     "The ordered product IDs must exactly match all products for the event without missing or extra IDs.": "Die bestellten Produkt-IDs müssen genau mit allen Produkten der Veranstaltung übereinstimmen, ohne fehlende oder zusätzliche IDs.",
-    "This product is outdated. Please reload the page.": "Dieses Produkt ist veraltet. Bitte laden Sie die Seite neu."
+    "This product is outdated. Please reload the page.": "Dieses Produkt ist veraltet. Bitte laden Sie die Seite neu.",
+    "Reserved": "Reserviert",
+    "Cancelled": "Storniert",
+    "Completed": "Abgeschlossen",
+    "Awaiting offline payment": "Warten auf Offline-Zahlung",
+    "ID": "ID",
+    "First Name": "Vorname",
+    "Last Name": "Nachname",
+    "Email": "E-Mail",
+    "Status": "Status",
+    "Is Checked In": "Eingecheckt",
+    "Checked In At": "Eingecheckt am",
+    "Product ID": "Produkt-ID",
+    "Product Name": "Produktname",
+    "Event ID": "Veranstaltungs-ID",
+    "Public ID": "Öffentliche ID",
+    "Short ID": "Kurz-ID",
+    "Created Date": "Erstellungsdatum",
+    "Last Updated Date": "Letztes Aktualisierungsdatum",
+    "Notes": "Notizen",
+    "Total Before Additions": "Gesamtsumme vor Zuschlägen",
+    "Total Gross": "Gesamtbrutto",
+    "Total Tax": "Gesamtsteuer",
+    "Total Fee": "Gesamtgebühr",
+    "Total Refunded": "Gesamtbetrag erstattet",
+    "Payment Status": "Zahlungsstatus",
+    "Refund Status": "Erstattungsstatus",
+    "Currency": "Währung",
+    "Created At": "Erstellt am",
+    "Payment Gateway": "Zahlungsanbieter",
+    "Is Partially Refunded": "Teilweise erstattet",
+    "Is Fully Refunded": "Vollständig erstattet",
+    "Is Free Order": "Kostenlose Bestellung",
+    "Is Manually Created": "Manuell erstellt",
+    "Billing Address": "Rechnungsadresse",
+    "Promo Code": "Rabattcode",
+    "Failed to handle incoming Stripe webhook": "Fehler beim Verarbeiten des eingehenden Stripe-Webhooks",
+    "Notes must be less than 2000 characters": "Notizen dürfen maximal 2000 Zeichen enthalten",
+    "Invalid payment provider selected.": "Ungültiger Zahlungsanbieter ausgewählt.",
+    "Payment instructions are required when offline payments are enabled.": "Zahlungsanweisungen sind erforderlich, wenn Offline-Zahlungen aktiviert sind.",
+    "The invoice prefix may only contain letters, numbers, and hyphens.": "Das Rechnungspräfix darf nur Buchstaben, Zahlen und Bindestriche enthalten.",
+    "The organization name is required when invoicing is enabled.": "Der Organisationsname ist erforderlich, wenn Rechnungsstellung aktiviert ist.",
+    "The organization address is required when invoicing is enabled.": "Die Organisationsadresse ist erforderlich, wenn Rechnungsstellung aktiviert ist.",
+    "The invoice start number must be at least 1.": "Die Rechnungsstartnummer muss mindestens 1 sein.",
+    "There is no default account configuration available": "Es ist keine Standardkontokonfiguration verfügbar",
+    "Product price ID is not valid": "Produktpreis-ID ist ungültig",
+    "Invoice": "Rechnung",
+    "Editing order with ID: :id": "Bestellung mit ID bearbeiten: :id",
+    "Marking order as paid": "Bestellung als bezahlt markieren",
+    "Received a :event Stripe event, which has no handler": "Ein :event Stripe-Ereignis wurde empfangen, aber es gibt keinen Handler dafür",
+    "Order is not in the correct status to transition to offline payment": "Die Bestellung hat nicht den richtigen Status für den Wechsel zur Offline-Zahlung",
+    "Order reservation has expired": "Die Bestellreservierung ist abgelaufen",
+    "Offline payments are not enabled for this event": "Offline-Zahlungen sind für diese Veranstaltung nicht aktiviert",
+    "There are no products available in this category": "Es sind keine Produkte in dieser Kategorie verfügbar",
+    "Webhook not found": "Webhook nicht gefunden",
+    "Unable to check in as attendee :attendee_name\\'s order is awaiting payment": "Einchecken nicht möglich, da die Bestellung von :attendee_name auf Zahlung wartet",
+    "Attendee :attendee_name\\'s order cannot be marked as paid. Please check your event settings": "Die Bestellung von :attendee_name kann nicht als bezahlt markiert werden. Bitte überprüfen Sie Ihre Veranstaltungs-Einstellungen",
+    "Invoice already exists": "Rechnung existiert bereits",
+    "Invoice not found": "Rechnung nicht gefunden",
+    "Order is not awaiting offline payment": "Die Bestellung wartet nicht auf eine Offline-Zahlung",
+    "Refund already processed": "Rückerstattung bereits bearbeitet",
+    "Stripe refund successful": "Stripe-Rückerstattung erfolgreich",
+    "There are no tickets available for this event": "Für diese Veranstaltung sind keine Tickets verfügbar",
+    "Address line 1 is required": "Adresszeile 1 ist erforderlich",
+    "City is required": "Stadt ist erforderlich",
+    "Zip or postal code is required": "Postleitzahl ist erforderlich",
+    "Country is required": "Land ist erforderlich",
+    "If you did not request a password reset, please immediately reset your password.": "Falls Sie kein Passwort-Reset angefordert haben, setzen Sie Ihr Passwort bitte sofort zurück.",
+    "ℹ️ Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "ℹ️ Ihre Bestellung wartet auf Zahlung. Tickets wurden ausgestellt, sind jedoch erst nach Zahlung gültig.",
+    "ℹ️ This order is pending payment. Please mark the payment as received on the order management page once payment is received.": "ℹ️ Diese Bestellung wartet auf Zahlung. Bitte markieren Sie die Zahlung als eingegangen auf der Bestellverwaltungsseite, sobald die Zahlung erfolgt ist.",
+    "Order Status:": "Bestellstatus:",
+    "Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "Ihre Bestellung wartet auf Zahlung. Tickets wurden ausgestellt, sind jedoch erst nach Zahlung gültig.",
+    "Payment Instructions": "Zahlungsanweisungen",
+    "Please follow the instructions below to complete your payment.": "Bitte folgen Sie den untenstehenden Anweisungen, um Ihre Zahlung abzuschließen.",
+    "Invoice Number": "Rechnungsnummer",
+    "Date Issued": "Ausstellungsdatum",
+    "Due Date": "Fälligkeitsdatum",
+    "Amount Due": "Fälliger Betrag",
+    "Billed To": "Rechnung an",
+    "DESCRIPTION": "BESCHREIBUNG",
+    "RATE": "SATZ",
+    "QTY": "MENGE",
+    "AMOUNT": "BETRAG",
+    "Subtotal": "Zwischensumme",
+    "Total Discount": "Gesamtrabatt",
+    "Total Service Fee": "Gesamtservicegebühr",
+    "Total Amount": "Gesamtbetrag",
+    "For any queries, please contact us at": "Bei Fragen kontaktieren Sie uns bitte unter",
+    "Tax Information": "Steuerinformationen"
 }
