--- a/backend/lang/zh-cn.json
+++ b/backend/lang/zh-cn.json
@@ -331,5 +331,93 @@
     "Product type cannot be changed as products have been registered for this type": "无法更改产品类型，因为此类型的产品已注册。",
     "The ordered category IDs must exactly match all categories for the event without missing or extra IDs.": "所订购的类别 ID 必须与活动的所有类别完全匹配，不能有遗漏或多余的 ID。",
     "The ordered product IDs must exactly match all products for the event without missing or extra IDs.": "所订购的产品 ID 必须与活动的所有产品完全匹配，不能有遗漏或多余的 ID。",
-    "This product is outdated. Please reload the page.": "此产品已过时。请重新加载页面。"
+    "This product is outdated. Please reload the page.": "此产品已过时。请重新加载页面。",
+    "Reserved": "已预订",
+    "Cancelled": "已取消",
+    "Completed": "已完成",
+    "Awaiting offline payment": "等待线下付款",
+    "ID": "ID",
+    "First Name": "名",
+    "Last Name": "姓",
+    "Email": "电子邮件",
+    "Status": "状态",
+    "Is Checked In": "已签到",
+    "Checked In At": "签到时间",
+    "Product ID": "产品 ID",
+    "Product Name": "产品名称",
+    "Event ID": "活动 ID",
+    "Public ID": "公开 ID",
+    "Short ID": "短 ID",
+    "Created Date": "创建日期",
+    "Last Updated Date": "最后更新日期",
+    "Notes": "备注",
+    "Total Before Additions": "添加前总计",
+    "Total Gross": "总金额",
+    "Total Tax": "总税额",
+    "Total Fee": "总费用",
+    "Total Refunded": "总退款金额",
+    "Payment Status": "支付状态",
+    "Refund Status": "退款状态",
+    "Currency": "货币",
+    "Created At": "创建时间",
+    "Payment Gateway": "支付网关",
+    "Is Partially Refunded": "部分退款",
+    "Is Fully Refunded": "全额退款",
+    "Is Free Order": "免费订单",
+    "Is Manually Created": "手动创建",
+    "Billing Address": "账单地址",
+    "Promo Code": "优惠码",
+    "Failed to handle incoming Stripe webhook": "处理 Stripe Webhook 失败",
+    "Notes must be less than 2000 characters": "备注必须少于 2000 个字符",
+    "Invalid payment provider selected.": "所选支付提供商无效。",
+    "Payment instructions are required when offline payments are enabled.": "启用线下支付时必须提供支付说明。",
+    "The invoice prefix may only contain letters, numbers, and hyphens.": "发票前缀只能包含字母、数字和连字符。",
+    "The organization name is required when invoicing is enabled.": "启用发票功能时，必须填写组织名称。",
+    "The organization address is required when invoicing is enabled.": "启用发票功能时，必须填写组织地址。",
+    "The invoice start number must be at least 1.": "发票起始编号必须至少为 1。",
+    "There is no default account configuration available": "没有可用的默认账户配置",
+    "Product price ID is not valid": "产品价格 ID 无效",
+    "Invoice": "发票",
+    "Editing order with ID: :id": "正在编辑订单，ID：:id",
+    "Marking order as paid": "标记订单为已支付",
+    "Received a :event Stripe event, which has no handler": "收到 Stripe 事件 :event，但没有处理程序",
+    "Order is not in the correct status to transition to offline payment": "订单状态不正确，无法转换为线下支付",
+    "Order reservation has expired": "订单预订已过期",
+    "Offline payments are not enabled for this event": "此活动未启用线下支付",
+    "There are no products available in this category": "此类别中没有可用产品",
+    "Webhook not found": "Webhook 未找到",
+    "Unable to check in as attendee :attendee_name\\'s order is awaiting payment": "无法签到，因为参会者 :attendee_name 的订单正在等待支付",
+    "Attendee :attendee_name\\'s order cannot be marked as paid. Please check your event settings": "无法将参会者 :attendee_name 的订单标记为已支付。请检查您的活动设置",
+    "Invoice already exists": "发票已存在",
+    "Invoice not found": "未找到发票",
+    "Order is not awaiting offline payment": "订单未等待线下支付",
+    "Refund already processed": "退款已处理",
+    "Stripe refund successful": "Stripe 退款成功",
+    "There are no tickets available for this event": "此活动没有可用的门票",
+    "Address line 1 is required": "地址第一行必填",
+    "City is required": "城市必填",
+    "Zip or postal code is required": "邮政编码必填",
+    "Country is required": "国家必填",
+    "If you did not request a password reset, please immediately reset your password.": "如果您未请求重置密码，请立即重置您的密码。",
+    "ℹ️ Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "ℹ️ 您的订单正在等待支付。门票已发放，但在收到付款之前将无效。",
+    "ℹ️ This order is pending payment. Please mark the payment as received on the order management page once payment is received.": "ℹ️ 此订单正在等待支付。收到付款后，请在订单管理页面将其标记为已支付。",
+    "Order Status:": "订单状态：",
+    "Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "您的订单正在等待支付。门票已发放，但在收到付款之前将无效。",
+    "Payment Instructions": "支付说明",
+    "Please follow the instructions below to complete your payment.": "请按照以下说明完成您的支付。",
+    "Invoice Number": "发票编号",
+    "Date Issued": "开票日期",
+    "Due Date": "到期日期",
+    "Amount Due": "应付金额",
+    "Billed To": "账单收件人",
+    "DESCRIPTION": "描述",
+    "RATE": "费率",
+    "QTY": "数量",
+    "AMOUNT": "金额",
+    "Subtotal": "小计",
+    "Total Discount": "总折扣",
+    "Total Service Fee": "总服务费",
+    "Total Amount": "总金额",
+    "For any queries, please contact us at": "如有任何疑问，请联系我们：",
+    "Tax Information": "税务信息"
 }
